# libarchive

./: .cirrus.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.inc  NEWS  PROJECTS  Package.swift  README  README.md  SECURITY.md  aclocal.m4  autogen.sh  config.h.cmake  config.h.in  config.h.in~  configure.ac  release.sh  upload.sh  vcpkg-configuration.json  vcpkg.json  version
.github/workflows/: ci.yml  cifuzz.yml  codeql.yml  fuzz.yml  scorecard.yml  swift-ci.yml
VuLN-main/: deploy.tf  interface.js  payment.cs  um.cs
cat/: CMakeLists.txt  bsdcat.c  bsdcat.h  bsdcat_platform.h  cmdline.c
cat/test/: CMakeLists.txt  main.c  test.h  test_error.c  test_error_mixed.c  test_expand.Z.uu  test_expand.gz.uu  test_version.c
cmake/: CheckFuncs.cmake  CheckHeaderSTDC.cmake  CheckHeaders.cmake  CheckStructMember.cmake  CheckTypeExists.cmake  FindLZMA.cmake  config.h.in
contrib/: README  archivetest.c  libarchive.1aix53.spec  libarchive.spec  untar.c
contrib/Swift/: README.md
contrib/android/: Android.mk
contrib/oss-fuzz/: libarchive_7zip_fuzzer.cc  libarchive_ar_fuzzer.cc  libarchive_cab_fuzzer.cc  libarchive_cpio_fuzzer.cc  libarchive_encryption_fuzzer.cc  libarchive_entry_fuzzer.cc  libarchive_filter_fuzzer.cc  libarchive_iso9660_fuzzer.cc  libarchive_lha_fuzzer.cc  libarchive_linkify_fuzzer.cc  libarchive_match_fuzzer.cc  libarchive_mtree_fuzzer.cc  libarchive_rar5_fuzzer.cc  libarchive_rar_fuzzer.cc  libarchive_read_disk_fuzzer.cc  libarchive_roundtrip_fuzzer.cc  libarchive_seek_fuzzer.cc  libarchive_string_fuzzer.cc  libarchive_tar_fuzzer.cc  libarchive_warc_fuzzer.cc  libarchive_write_disk_fuzzer.cc  libarchive_write_fuzzer.cc  libarchive_xar_fuzzer.cc  libarchive_zip_fuzzer.cc
contrib/psota-benchmark/: results.txt  tcp.sh
contrib/shar/: tree_config.h
cpio/: CMakeLists.txt  Makefile  bsdcpio.1  cmdline.c  config_freebsd.h  cpio.c  cpio.h  cpio_cygwin.c  cpio_cygwin.h  cpio_platform.h  cpio_windows.c  cpio_windows.h  matching.c  pathmatch.c
cpio/test/: CMakeLists.txt  Makefile  main.c  test.h  test_0.c  test_basic.c  test_cmdline.c  test_extract_cpio_absolute_paths.c  test_extract_cpio_bz2.c  test_extract_cpio_lz.c  test_extract_cpio_lzma.c  test_extract_cpio_lzo.c  test_extract_cpio_xz.c  test_format_newc.c  test_gcpio_compat.c  test_option_0.c  test_option_B.c  test_option_B_upper.c  test_option_C_upper.c  test_option_J_upper.c  test_option_L.c  test_option_L_upper.c  test_option_Z_upper.c  test_option_a.c  test_option_c.c  test_option_d.c  test_option_f.c  test_option_l.c  test_option_lz4.c  test_option_lzma.c  test_option_lzop.c  test_option_m.c  test_option_t.c  test_option_tnv.stdout.uu  test_option_u.c  test_option_version.c  test_option_y.c  test_option_z.c  test_option_zstd.c  test_owner_parse.c  (+2 more)
doc/: RUNNING_TESTS_LINUX.md  WRITING_TESTS.md  mdoc2man.awk  mdoc2mediawiki.awk  mdoc2wiki.awk  update.sh
examples/: tarfilter.c  untar.c
examples/minitar/: Makefile  minitar.c
libarchive/: CMakeLists.txt  Makefile  archive.h  archive.h.in  archive_acl.c  archive_acl_maps_linux.c  archive_acl_private.h  archive_base64.c  archive_base64_private.h  archive_blake2_impl.h  archive_check_magic.c  archive_cmdline.c  archive_cmdline_private.h  archive_crc32.h  archive_crypto.c  archive_crypto_private.h  archive_cryptor.c  archive_cryptor_private.h  archive_digest.c  archive_digest_private.h  archive_disk_acl_darwin.c  archive_disk_acl_freebsd.c  archive_disk_acl_linux.c  archive_disk_acl_sunos.c  archive_endian.h  archive_entry.3  archive_entry.c  archive_entry.h  archive_entry_acl.3  archive_entry_copy_bhfi.c  archive_entry_copy_stat.c  archive_entry_link_resolver.c  archive_entry_linkify.3  archive_entry_locale.h  archive_entry_paths.3  archive_entry_perms.3  archive_entry_private.h  archive_entry_sparse.c  archive_entry_stat.3  archive_entry_stat.c  (+220 more)
libarchive/test/: CMakeLists.txt  Makefile  archive_read_support.c  main.c  paultest.sh  read_open_memory.c  test.h  test_7zip_filename_encoding.c  test_acl_basic.c  test_acl_freebsd.c  test_acl_freebsd_posix1e.c  test_acl_nfs4_null_id_overflow.c  test_acl_nfs4_text.c  test_acl_pax.c  test_acl_platform_nfs4.c  test_acl_platform_posix1e.c  test_acl_posix1e_text.c  test_acl_solaris.c  test_acl_solaris_nfs4.c  test_acl_solaris_posix1e.c  test_archive_api_feature.c  test_archive_cmdline.c  test_archive_crypto.c  test_archive_getdate.c  (+393 more)
libarchive_fe/: err.c  err.h  lafe_getline.c  lafe_platform.h  line_reader.c  line_reader.h  matching.c  matching.h  passphrase.c  pathmatch.c
rust/: Cargo.toml
rust/src/: lib.rs  parsers.rs
tar/: CMakeLists.txt  COPYING  Makefile  bsdtar.1  bsdtar.c  bsdtar.h  bsdtar_cygwin.c  bsdtar_cygwin.h  bsdtar_platform.h  bsdtar_windows.c  bsdtar_windows.h  cmdline.c  config_freebsd.h  creation_set.c  getdate.c  getdate.h  getdate.y  getopt.c  getopt.h  matching.c  read.c  siginfo.c  subst.c  tree.c  tree.h  util.c  write.c
tar/test/: CMakeLists.txt  Makefile  main.c  test.h  test_0.c  test_basic.c  test_copy.c  test_crlf_mtree.c  test_extract_tar_bz2.c  test_extract_tar_gz.c  test_extract_tar_lrz.c  test_extract_tar_lz.c  test_extract_tar_lzma.c  test_extract_tar_lzo.c  test_extract_tar_xz.c  test_getdate.c  test_help.c  test_leading_slash.c  test_mac_metadata_zip.c  test_mac_metadata_zip.zip.uu  test_option_C_mtree.c  test_option_C_upper.c  test_option_H_upper.c  test_option_L_upper.c  test_option_P_upper.c  test_option_T.c  test_option_T_upper.c  test_option_U_upper.c  test_option_X_upper.c  test_option_a.c  test_option_b.c  test_option_exclude.c  test_option_exclude_vcs.c  test_option_fflags.c  test_option_gid_gname.c  test_option_ignore_zeros.c  test_option_keep_newer.c  test_option_keep_newer_files.c  test_option_keep_newer_files.tgz.uu  test_option_lz4.c  (+24 more)
test_utils/: test_common.h  test_main.c  test_utils.c  test_utils.h
unzip/: CMakeLists.txt  bsdunzip.1  bsdunzip.c  bsdunzip.h  bsdunzip_platform.h  cmdline.c  la_getline.c
unzip/test/: CMakeLists.txt  test.h  test_I.c
(+23 files in other folders)
